# rds

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mesh.cpp  mesh.h  point2D.cpp  point2D.h  solver.cpp  solver.h  triangle2D.cpp  triangle2D.h  vector2D.cpp  vector2D.h
geo/: ghost2D.cpp  ghost2D.h  point2D.h  triangle2D.cpp  triangle2D.h  vector2D.cpp  vector2D.h
src/: constants.h  functions.cpp  functions.h  main.cpp  mesh.cpp  mesh.h  solver.cpp  solver.h  statSolver.cpp  statSolver.h  unstatSolver.cpp  unstatSolver.h  unstatSolverExplicit.cpp  unstatSolverExplicit.h  unstatSolverImplicit.cpp  unstatSolverImplicit.h
src/functions/: statFunctions.cpp  statFunctions.h  steadyFunctions.cpp  steadyFunctions.h  timeDepFunctions.cpp  timeDepFunctions.h  unstatFunctions.cpp  unstatFunctions.h
src/geo/: triangle2D.cpp  triangle2D.h  vector2D.cpp  vector2D.h
src/helpers/: argsParser.cpp  argsParser.h
src/statSolver/: statSolver.cpp  statSolver.h
src/steadySolver/: steadySolver.cpp  steadySolver.h
src/timeDepSolver/explicit/: timeDepSolverExplicit.cpp  timeDepSolverExplicit.h
src/unstatSolver/implicit/: unstatSolverImplicit.cpp  unstatSolverImplicit.h
tools/: norm_plot.py  norm_test.sh  unstatSolver.cpp  unstatSolver.h
